--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>INFT1206 Section 09</title>
 </head>
 <body>
     <h1>INFT1206 Section 09 Home</h1>
+    <h3>Welcome to your Web Development class. This is a simple demo.</h3>
 </body>
 </html>
