--- a/assingment1/part2/index.html
+++ b/assingment1/part2/index.html
@@ -31,14 +31,17 @@
 
   <main>
   
-    <h2>Welcome</h2>
+    <section>
+      <h2>Welcome</h2>
 
-    <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more
-      about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to
-      share ideas, tips, and photos with other like-minded people.</p>
+      <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more
+        about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to
+        share ideas, tips, and photos with other like-minded people.</p>
 
-    <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+      <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+    </section>
 
+    <aside>
     <h2>Favourite photos</h2>
 
     <a href="favorite-1.jpg"><img src="favorite-1_th.jpg"
@@ -49,6 +52,7 @@
         alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
     <a href="favorite-4.jpg"><img src="favorite-4_th.jpg"
         alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+    </aside>
   </main>
 
   <footer>
