Added html comments to assignment 1 part 2

--- a/assingment1/part2/index.html
+++ b/assingment1/part2/index.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Judah Brand
+  File: index.html
+  Date: 21 January 2024
+  A fake birdwatching website for practice with structural elements.
+-->
 <!DOCTYPE html>
 <html lang="en">
 
