Added resized images

--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -1,8 +1,8 @@
 <!--
-    Name:
-    File:
-    Date:
-    
+    Name: Judah Brand
+    File: index.html
+    Date: January 26, 2024
+    desc:
 -->
 <!DOCTYPE html>
 <html lang="en-US">
