--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -107,12 +107,14 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
+      <img>  
 
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
+        
 
         <h2>Rocking the free web</h2>
 
@@ -124,10 +126,10 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img src="firefox_logo-only_RGB.png" alt="FireFox Logo" srcset="firefox_logo-only_RGB_400.png 400w, firefox_logo-only_RGB_120.png 120w" sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="mozilla-dinosaur-head.png" alt="" srcset="" sizes="">
         </a>
         <a href="https://addons.mozilla.org/">
           <img>
