--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -114,7 +114,7 @@
     <main>
       <article>
         <!-- insert iframe from youtube -->
-        
+        <iframe width="1587" height="598" src="https://www.youtube.com/embed/ojcNcvb1olg" title="Choose Independent - Choose Firefox" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         <h2>Rocking the free web</h2>
 
@@ -129,7 +129,7 @@
           <img src="firefox_logo-only_RGB.png" alt="FireFox Logo" srcset="firefox_logo-only_RGB_400.png 400w, firefox_logo-only_RGB_120.png 120w" sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="mozilla-dinosaur-head.png" alt="" srcset="" sizes="">
+          <img src="mozilla-dinosaur-head.png" alt="Mozilla Logo" srcset="" sizes="">
         </a>
         <a href="https://addons.mozilla.org/">
           <img>
