--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -129,10 +129,10 @@
           <img src="firefox_logo-only_RGB.png" alt="FireFox Logo" srcset="firefox_logo-only_RGB_400.png 400w, firefox_logo-only_RGB_120.png 120w" sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="mozilla-dinosaur-head.png" alt="Mozilla Logo" srcset="" sizes="">
+          <img src="mozilla-dinosaur-head.png" alt="Mozilla Logo" srcset="mozilla-dinosaur-head_400.png 400w, mozilla-dinosaur-head_120 120w" sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="" alt="" srcset="" sizes="">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img>
