--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -132,10 +132,10 @@
           <img src="mozilla-dinosaur-head.png" alt="Mozilla Logo" srcset="mozilla-dinosaur-head_400.png 400w, mozilla-dinosaur-head_120 120w" sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img src="" alt="" srcset="" sizes="">
+          <img src="firefox-addons.jpg" alt="FireFox Addons" srcset="firefox-addons_120.jpg 120w" sizes="(max-width: 500px) 120px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="mdn.svg" alt="" srcset="" sizes="">
         </a>
         <div class="clearfix"></div>
       </div>
