Added HTML comments on part 2 files

--- a/assignment2/part2/blank-template.html
+++ b/assignment2/part2/blank-template.html
@@ -1,3 +1,9 @@
+<!--
+  name: Judah Brand
+  file: blank-template.html
+  date: January 29th, 2024
+  desc:
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
