Finished html comments description

--- a/assignment2/part2/blank-template.html
+++ b/assignment2/part2/blank-template.html
@@ -2,7 +2,7 @@
   name: Judah Brand
   file: blank-template.html
   date: January 29th, 2024
-  desc:
+  A table of the planets in our solar system and some statistics surrounding them.
 -->
 <!DOCTYPE html>
 <html lang="en-US">
