Added final changes to assignment 2 part 1

--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -2,7 +2,7 @@
     Name: Judah Brand
     File: index.html
     Date: January 26, 2024
-    desc:
+    Mozilla firefox directory for browser download and addons.
 -->
 <!DOCTYPE html>
 <html lang="en-US">
@@ -135,13 +135,14 @@
           <img src="firefox-addons.jpg" alt="FireFox Addons" srcset="firefox-addons_120.jpg 120w" sizes="(max-width: 500px) 120px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="mdn.svg" alt="" srcset="" sizes="">
+          <img src="mdn.svg" alt="Mozilla Addons" srcset="" sizes="">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <img src="red-panda.jpg" alt="Red Panda" srcset="red-panda_1200.jpg 1200w, red-panda_600.jpg 600w" sizes="(max-width: 500px) 600px 1200px">
       </div>
 
     </main>
