Assignment 2 minor changes

--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -107,7 +107,7 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-      <img>  
+      <img src="firefox_logo-only_RGB.png" alt="Header FireFox Logo" srcset="firefox_logo-only_RGB_120.png 120w" sizes="">
 
     </header>
 
