--- a/assignment3/part2/index.html
+++ b/assignment3/part2/index.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Judah
+  File: index.html
+  Date: February 16th, 2024
+  This file holds a cool box.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
