--- a/assignment3/part4/index.html
+++ b/assignment3/part4/index.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Judah Brand
+  File: index.html
+  Date: February 23rd, 2024
+  Website with images of hot air balloons
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
