Added HTML comments to assignment 4 part 3

--- a/assignment4/part3/index.html
+++ b/assignment4/part3/index.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Judah Brand
+  Date: April 1st, 2024
+  File: index.html
+  A website with a random set of bouncing balls across the screen
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
