--- a/assignment4/part1/index.html
+++ b/assignment4/part1/index.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Judah Brand
+  Date: April 1st, 2024
+  File: index.html
+  A website that generates a random story in both US and UK metrics
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
