--- a/assignment4/part2/index.html
+++ b/assignment4/part2/index.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Judah Brand
+  Date: April 1st, 2024
+  File: index.html
+  An image gallery that includes a button to darken the display
+-->
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
