Added final touches to assignment 4 part 4

--- a/assignment4/part4/index.html
+++ b/assignment4/part4/index.html
@@ -2,7 +2,7 @@
   Name: Judah Brand
   Date: April 1st, 2024
   File: index.html
-  A website with a random set of bouncing balls across the screen
+  A website with a random set of bouncing balls across the screen and a counter for how many balls are on screen
 -->
 <!DOCTYPE html>
 <html lang="en-US">
