Finished assignment 4 part 4

--- a/assignment4/part4/index.html
+++ b/assignment4/part4/index.html
@@ -2,7 +2,7 @@
   Name: Judah Brand
   Date: April 1st, 2024
   File: index.html
-  A website with a random set of bouncing balls across the screen and a counter for how many balls are on screen
+  A screen of random bouncing balls with a counter and a white evil ball that deletes others
 -->
 <!DOCTYPE html>
 <html lang="en-US">
@@ -15,6 +15,7 @@
 
   <body>
     <h1>bouncing balls</h1>
+    <p>Ball count: </p>
     <canvas></canvas>
 
     <script src="main.js"></script>
