--- a/assignment5/part1/index.html
+++ b/assignment5/part1/index.html
@@ -1,7 +1,7 @@
 <!--
   Name: Judah Brand
   File: index.html
-  Date: April 9th, 2024
+  Date: 9th April 2024
   A wildlife website about bears, modified for accessibility.
 -->
 <!DOCTYPE html>
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- the below three lines are a fix to get HTML5 semantic elements working in old versions of Internet Explorer-->
-    <!--[if lt IE 9]>
+    [if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    [endif]
   </head>
 
   <body>
@@ -104,7 +104,7 @@
         <p>The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.</p>
         
         <audio controls>
-          <source src="bear.mp3" type="audio/mp3">
+          <source src="bear.mp3" type="audio/mp3" aria-labelledby="bear.mp3">
           <source src="bear.ogg" type="audio/ogg">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
         </audio>
